# BrainCraft

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  frontend.Dockerfile  requirements.txt
backend/: .env.example  pyproject.toml
backend/src/: config.py  main.py  requirements.txt
backend/src/api/: routes.py
backend/src/services/: __init__.py  ai_service.py  audio_service.py
backend/src/utils/: logger.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: ChatInterface.tsx  ChatMessage.tsx  ConnectionStatus.tsx  DiagramPanel.tsx  Mermaid.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/services/: api.ts
frontend/styles/: globals.css
frontend/utils/: logger.ts
src/: main.py
src/api/: routes.py
src/services/: ai_service.py  haystack_agent.py  haystack_service.py
